--- a/index.html
+++ b/index.html
@@ -4,12 +4,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assistant Project</title>
+    <title>دستیار</title>
+    <link rel="icon" type="image/x-icon" href="./assets/Images/Google/logoHeader.svg">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
+    <!-- <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
+        type="text/css" /> -->
     <link rel="stylesheet" href="./assets/Styles/style.css">
 </head>
 
 <body>
     <div class="container">
+        <header class="header">
+            <a href="#" class="logo">
+                <img src="./assets/Images/Google/logoHeader.svg" class="logoImage">
+                <h1 class="logoTitle">دستیار</h1>
+            </a>
+            <section class="signUpApp">
+                <span class=" material-symbols-outlined signUpApp__signUpIcon">person</span>
+                <div class="signUpApp__signUpContainer">
+
+                </div>
+            </section>
+            <section class="settingApp">
+                <span class="material-symbols-outlined settingApp__settingIcon">settings</span>
+                <div class="settingApp_settingContainer">
+
+                </div>
+            </section>
+        </header>
+        <main class="main">
+            <section class="todoSection">
+                <header class="todoSectionHeader">
+                    <h2 class="todoSection__Title">دست نویس</h2>
+                    <span class="material-symbols-outlined todoSection__visibilityOff">visibility_off</span>
+                </header>
+                <ul class="todoSection__TasksList">
+                    <li class="todoSection__TasksItem">
+
+                        <i class="todoSection__checkBoxIcon"></i>
+                        <span class="todoSection__userTaskContent">کار شماره اول من</span>
+                        <span class="material-symbols-outlined  todoSection__editIcon">edit</span>
+                        <span class="material-symbols-outlined  todoSection__removeIcon">delete</span>
+                    </li>
+
+
+
+                    <li class="todoSection__TasksItem">کار شماره دوم من
+                        <!-- <i class="fi fi-tr-pen-circle"></i> -->
+                    </li>
+                    <li class="todoSection__TasksItem">کار شماره سوم من</li>
+                    <li class="todoSection__TasksItem">کار شماره چهارم من</li>
+                </ul>
+                <section class="todoSection__addTaskSection">
+                    <div class="todoSection__addInputWrapper">
+                        <input class="todoSection__addInputTask" type="text" placeholder="نوشتن تسک جدید">
+                        <button class="todoSection__addBtnTask">
+                            <span class="material-symbols-outlined todoSection__addTaskIcon">add</span>
+                        </button>
+                    </div>
+                </section>
+            </section>
+
+            <section class="googleSection">
+                <div class="googleSearchBox">
+                    <input type="text" class="googleSearchBox__searchInput">
+                    <img src="./assets/Images/Google/icons8-google-48.svg" alt="googleLogo"
+                        class="googleSearchBox__googleLogo">
+                    <button class="googleSearchBox__searchBtn">
+                        <span class="material-symbols-outlined">search</span>
+                    </button>
+
+                </div>
+                <div class="favoriteWebsites">
+                    <div class="favoriteWebsites__appBlock">
+                        <span
+                            class="material-symbols-outlined favoriteWebsites__appIcon favoriteWebsites__appIcon--size ">apps</span>
+                        <span class="favoriteWebsites__appName favoriteWebsites__appName--Bold">دم دستی</span>
+                    </div>
+                    <div class="favoriteWebsites__appBlock">
+                        <img class="favoriteWebsites__appLogo" src="./assets/Images/Google/icons8-google-96.svg"
+                            alt="logo">
+                        <span class="favoriteWebsites__appName">شب</span>
+                    </div>
+                    <div class="favoriteWebsites__appBlock"><span
+                            class="material-symbols-outlined favoriteWebsites__appIcon">add</span></div>
+                    <div class="favoriteWebsites__appBlock"><span class="material-symbols-outlined ">add</span></div>
+                    <div class="favoriteWebsites__appBlock"><span class="material-symbols-outlined ">add</span></div>
+                    <div class="favoriteWebsites__appBlock"><span class="material-symbols-outlined ">add</span></div>
+                    <div class="favoriteWebsites__appBlock"><span class="material-symbols-outlined ">add</span></div>
+                    <div class="favoriteWebsites__appBlock"><span class="material-symbols-outlined ">add</span></div>
+                    <div class="favoriteWebsites__appBlock"><span class="material-symbols-outlined ">add</span></div>
+                    <div class="favoriteWebsites__appBlock"><span class="material-symbols-outlined ">add</span></div>
+                    <div class="favoriteWebsites__appBlock"><span class="material-symbols-outlined ">add</span></div>
+                    <div class="favoriteWebsites__appBlock"><span class="material-symbols-outlined ">add</span></div>
+                </div>
+            </section>
+
+            <section class="timeAndWeatherSection"></section>
+        </main>
 
     </div>
 </body>
