--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دستیار</title>
     <link rel="icon" type="image/x-icon" href="./assets/Images/Google/logoHeader.svg">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
     <link rel="stylesheet" href="./assets/Styles/style.css">
+    <link rel="stylesheet" href="./assets/Styles/responsiveMobile.css">
     <script defer src="./assets/Scripts/googleSections.js"></script>
 
 </head>
@@ -30,8 +28,8 @@
                 <iconify-icon icon="ant-design:setting-filled" class="settingApp__settingIcon"></iconify-icon>
             </section>
         </header>
-        <main class="main">
 
+        <main class="main">
             <!---------------- Start Of To Do Section ---------------->
             <section class="todoSection">
                 <header class="todoSectionHeader">
@@ -56,7 +54,7 @@
                     <div class="todoSection__addInputWrapper">
                         <input class="todoSection__addInputTask" type="text" placeholder="نوشتن تسک جدید">
                         <button class="todoSection__addBtnTask">
-                            <span class="material-symbols-outlined todoSection__addTaskIcon">add</span>
+                            <iconify-icon icon="mingcute:add-fill" class="todoSection__addTaskIcon"></iconify-icon>
                         </button>
                     </div>
                 </section>
@@ -119,7 +117,8 @@
                             <!-- <span id="tempValue">12</span> -->
                             12
                         </div>
-                        <img class="weatherSection__tempratureIcon" src="./assets/Images/Weather/orginal.svg" alt="">
+                        <img class="weatherSection__tempratureIcon" src="./assets/Images/Weather/orginal.svg"
+                            alt="tempIcon">
                     </div>
 
                     <div class="weatherSection__tempratureComplex">
