finish style and logic ToDo List

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>دستیار</title>
     <link rel="icon" type="image/x-icon" href="./assets/Images/Google/logoHeader.svg">
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-
     <link rel="stylesheet" href="./assets/Styles/style.css">
     <link rel="stylesheet" href="./assets/Styles/responsiveMobile.css">
     <script defer src="./assets/Scripts/googleSections.js"></script>
-
+    <script defer src="./assets/Scripts/todoList.js"></script>
 </head>
 
 <body>
@@ -39,14 +38,7 @@
                 </header>
 
                 <!------- Start Of Tasks List ------->
-                <ul class="todoSection__TasksList">
-                    <li class="todoSection__TasksItem">
-                        <i class="todoSection__checkBoxIcon"></i>
-                        <span class="todoSection__userTaskContent">کار شماره اول من</span>
-                        <iconify-icon icon="solar:pen-bold" class="todoSection__editIcon"></iconify-icon>
-                        <iconify-icon icon="fluent:delete-16-filled" class="todoSection__removeIcon"></iconify-icon>
-                    </li>
-                </ul>
+                <ul class="todoSection__TasksList"></ul>
                 <!-------- End Of Tasks List -------->
 
                 <!---- Start Of Add Task Section ---->
